--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,16 @@
 {
   "presets": [
     ["env", { "modules": false }],
-    "stage-2"
+    ["stage-2"],
+    ["vue-app"]
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [["transform-runtime"], ["component", [
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-default"
+      }
+    ]]
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
